# tumour-classifier

./: .gitignore  LICENSE  brain_tumour_classification.py  feature_extraction.py  flake.nix  neural_nets.py  predict.py  requirements.txt  setup_data.py  tumour_thing.py
src/: pyproject.toml
src/classifier/: brain_tumour_classification.py  neural_nets.py  predict.py  setup_data.py
