[project]
name = "tumor-classifier"
version = "0.1.0"
description = "Brain tumor classification using ML and deep learning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.1",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.1",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.20",
    "xgboost>=3.0.1",
]

[project.scripts]
tumour-classifier = "classifier.brain_tumour_classification:main"

[project.optional-dependencies]
dev = [
    "jupyter",
    "ipykernel",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
